# Jackal

src/jackal_description/: CMakeLists.txt  package.xml
src/jackal_description/config/: bridge_parameters.yaml  ekf_parameters.yaml  jackal_control.yaml  rviz_jackal.rviz
src/jackal_description/launch/: jackal.launch.py  jackal_ekf_launch.py  jackal_gazebo_launch.py  jackal_ros2_control_launch.py  jackal_world_launch.py
src/jackal_description/rviz/: multi_jackal.rviz
src/jackal_description/src/: KobukiRemap.cpp
src/jackal_description/urdf/: jackal.gazebo  jackal.urdf.xacro
src/jackal_description/urdf/accessories/: OS1-32.urdf.xacro  _d435.urdf.xacro  _usb_plug.urdf.xacro  camera_mount.urdf.xacro
src/jackal_description/worlds/: empty.sdf  mobilab.sdf  playground.sdf
src/jackal_navigation/: CMakeLists.txt  package.xml
src/jackal_navigation/config/: amcl_params.yaml  localization.yaml  slam_parameters.yaml
src/jackal_navigation/launch/: jackal_navigation.launch.py  jackal_slam.launch.py  jackal_vslam.launch.py
src/jackal_navigation/maps/raw/: mobilab_sim.pgm  mobilab_sim.yaml  playground.pgm  playground.yaml
src/jackal_navigation/src/: nav_vel_remap.cpp
